osuUser 重构